fix: sidebar title alignment

--- a/packages/ui/app/src/css/components.scss
+++ b/packages/ui/app/src/css/components.scss
@@ -35,6 +35,15 @@
 
     .fern-sidebar-heading {
         @apply flex min-h-[32px] lg:min-h-[36px] mb-1;
+        @apply px-4 lg:px-3 inline-flex items-center;
+
+        .fa-icon {
+            @apply mr-3 text-faded shrink-0;
+        }
+
+        .fern-sidebar-heading-content {
+            @apply m-0 text-base leading-6 lg:text-sm lg:leading-5 font-semibold;
+        }
     }
 
     .fern-sidebar-group {
